# CNN_GPU

./: .gitignore  CMakeLists.txt  README.md  main  main.cpp  main.cu
.cache/clangd/index/: cuda_utils.hpp.F949498C6ACED029.idx  main.cpp.134499C61198BB32.idx  test_cuda.cu.47EC981E97D19462.idx  test_cuda.hpp.C57FF1A3F56B07EB.idx  tools.cpp.5028D25AF1548732.idx
src/: CMakeLists.txt  cuda_utils.hpp  test_cuda.cu  test_cuda.hpp  tools.hpp
